force-app/main/default/objects/Item_do_Pedido__c/Item_do_Pedido__c.object-meta.xml
<CustomObject>
    <description>Item (produto) dentro de um Pedido</description>
    <label>Item do Pedido</label>
    <pluralLabel>Itens do Pedido</pluralLabel>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>Número do Item</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>