force-app/main/default/objects/Item_do_Pedido__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <type>MasterDetail</type>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Itens do Pedido</relationshipLabel>
    <relationshipName>Itens_do_Pedido</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>