force-app/main/default/objects/Item_do_Pedido__c/fields/Preco_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Preco_Unitario__c</fullName>
    <label>Preço Unitário</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
</CustomField>